# JackTheShadow

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  install.sh  pyproject.toml  requirements.txt
src/jack_the_shadow/: __init__.py  __main__.py  cli.py
src/jack_the_shadow/config/: __init__.py  models.py  prompts.py  settings.py
src/jack_the_shadow/core/: __init__.py  command_registry.py  cost_tracker.py  engine.py  memory.py  methodology.py  orchestrator.py  permissions.py  state.py
src/jack_the_shadow/i18n/: __init__.py  en.py  engine.py  id.py
src/jack_the_shadow/services/: __init__.py  nvd.py  shodan_service.py
src/jack_the_shadow/session/: __init__.py  auth.py  history.py  paths.py  user_config.py
src/jack_the_shadow/tools/: __init__.py  base.py  executor.py  helpers.py  registry.py
src/jack_the_shadow/tools/builtin/: __init__.py  ask.py  bash.py  batch.py  cve.py  directory.py  doctor.py  encoder.py  exploit_search.py  files.py  git.py  hash_tool.py  http.py  memory.py  network.py  patch.py  payload.py  repl.py  report.py  search.py  shodan_tool.py  todo.py  web_fetch.py  web_search.py  wordlist.py
src/jack_the_shadow/tools/mcp/: __init__.py  client.py  protocol.py  tool.py
src/jack_the_shadow/ui/: __init__.py  banner.py  commands.py  console.py  messages.py  panels.py  phases.py  prompt.py  selector.py
src/jack_the_shadow/utils/: __init__.py  logger.py
tests/: __init__.py  conftest.py  test_history.py  test_i18n.py  test_session.py  test_state.py  test_tools.py
